made minor changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Word Beater</title>
-        <link rel="stylesheet" href="bootstrap.css">
+        <link rel="stylesheet" href="css/bootstrap.css">
     </head>
     <body>
         <header>
@@ -27,7 +27,7 @@
                     <p>Type each word in the given amount of seconds to score. To play again, just type the current word. Your score will reset.</p>
                 </div>
 
-                <script src="word.js"></script>
+                <script src="js/word.js"></script>
             
     </body>
 </html>
