--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
             name="login"
             placeholder="password"
           />
-          <input type="submit" class="fadeIn fourth" value="Log In" />
+   
         </form>
+        
+        <button type="submit" class="fadeIn fourth btn btn-group btn-primary"><a href="game.html">enter</a> </button>
+
 
         <!-- Remind Passowrd -->
         <div id="formFooter">
